# Gini

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  settings.yaml
backend/: Dockerfile  Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1bcceb3e22cf_create_agents_conversations_messages.py  2d6914458a11_create_events_table.py  5e72c289289b_create_skills_credentials_tables.py  a1b2c3d4e5f6_create_memories_table.py  a7b8c9d0e1f2_create_workflows_table.py  b2c3d4e5f6a7_create_execution_logs_table.py  b8c9d0e1f2a3_add_daily_budget_to_agents.py  baa7b139f758_create_tools_table.py  c3d4e5f6a7b8_add_auto_approve_to_agents.py  c9d0e1f2a3b4_remove_memories.py  d0e1f2a3b4c5_add_workflow_id_to_schedules.py  d4e5f6a7b8c9_create_agent_runs_table.py  e1f2a3b4c5d6_add_code_to_tools.py  e5f6a7b8c9d0_create_schedules_table.py  f1a2b3c4d5e6_add_runtime_state_to_agent_runs.py  f6a7b8c9d0e1_create_webhooks_table.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: agents.py  backup.py  chat.py  conversations.py  credentials.py  dashboard.py  events.py  execution_logs.py  health.py  memories.py  models.py  router.py  runs.py  schedules.py  settings_api.py  skills.py  templates.py  tools.py  webhooks.py  workflows.py
backend/app/event_bus/: bus.py  events.py  hitl.py
backend/app/models/: __init__.py  agent.py  agent_run.py  conversation.py  credential.py  event.py  execution_log.py  memory.py  message.py  schedule.py  skill.py  tool.py  webhook.py  workflow.py
backend/app/observability/: logging.py  middleware.py  trace.py
backend/app/sandbox/: manager.py
backend/app/schemas/: agent.py  agent_run.py  common.py  conversation.py  credential.py  event.py  execution_log.py  memory.py  message.py  schedule.py  skill.py  tool.py  webhook.py  workflow.py
backend/app/services/: agent_orchestrator.py  autonomous_execution.py  chat_execution.py  conversation_service.py  cost_tracker.py  credential_vault.py  execution_prep.py  (+7 more)
backend/scripts/: generate_encryption_key.py  seed_main_agent.py  seed_tools.py
backend/tests/: conftest.py  test_api_agents.py  test_api_backup.py  test_api_conversations.py  test_api_credentials.py  test_api_health.py  test_api_skills.py  test_api_tools.py  test_config.py  test_conversation_service.py  test_email_tools.py  test_execution_prep.py  test_main.py  test_redis.py  test_runs.py  test_skill_executor.py  test_tool_base.py  test_tool_catalog.py  test_tool_runner.py
(+57 files in other folders)
