[project]
name = "gini-backend"
version = "0.1.0"
description = "Gini AI Assistant Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.2",
    "openai>=1.58.0",
    "anthropic>=0.40.0",
    "cryptography>=44.0.0",
    "croniter>=2.0.0",
    "python-multipart>=0.0.9",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default arg (idiomatic FastAPI Depends)
    "E712",   # == True/False (needed for SQLAlchemy column expressions)
    "ASYNC109", # timeout parameter name (intentional in tool APIs)
    "ASYNC240", # pathlib in async (acceptable for local file ops)
    "SIM105",  # contextlib.suppress vs try/except/pass (readability preference)
    "SIM108",  # ternary vs if/else (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
